--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="IITRPR CS301 Railway"
+      content="Book Train Ticket in the Best Railway"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CS301 Railways</title>
+    <title>Railways</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
