Add form to update query in trains results route

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Railways</title>
+    <script async defer data-domain="traintkt.appspot.com" src="https://34.66.25.136.xip.io/js/plausible.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
